attic/old_tests/xml/invalidxml/raDec/badra1.xml.README
badra1.xml: BAD ra is 360.0 -- range is maxExclusive
